--- a/Tricorder/.classpath
+++ b/Tricorder/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="src" path="HermitAndroid"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/HermitLibrary"/>
+	<classpathentry kind="src" path="HermitAndroid_src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
