--- a/Formula/.project
+++ b/Formula/.project
@@ -38,9 +38,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>Hermit Android</name>
+			<name>HermitAndroid_src</name>
 			<type>2</type>
-			<locationURI>Workspace/Hermit%20Android</locationURI>
+			<locationURI>_android_HermitAndroid_810781ac/src</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
