--- a/Formula/AndroidManifest.xml
+++ b/Formula/AndroidManifest.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.hermit.formula" android:versionCode="1"
-	android:versionName="1.0.0">
+	   package="org.hermit.formula"
+	   android:versionCode="1"
+	   android:versionName="1.0.0">
+	
+    <supports-screens
+            android:smallScreens="true"
+            android:normalScreens="true"
+            android:largeScreens="true"
+            android:resizeable="true"
+            android:anyDensity="true" />
 
 	<application android:icon="@drawable/formula"
 			android:label="@string/app_name"
 			android:description="@string/description"
 			android:debuggable="true">
-			
-		<provider
-				android:name=".provider.FormulaProvider"
-				android:authorities="org.hermit.provider.Formula">
-		</provider>
+
+        <provider android:name=".provider.FormulaProvider"
+                android:authorities="org.hermit.provider.Formula" />
 
 		<activity android:name=".FormulaRunner" android:label="@string/app_name">
 			<intent-filter>
@@ -70,6 +76,7 @@
 
 	</application>
 
-	<uses-sdk android:minSdkVersion="3"></uses-sdk>
+	<uses-sdk android:minSdkVersion="4" />
+	
 </manifest>
 
