--- a/Scrambled Net Lite/AndroidManifest.xml
+++ b/Scrambled Net Lite/AndroidManifest.xml
@@ -22,7 +22,7 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.hermit.netscramble" android:installLocation="auto" android:versionName="5.0" android:versionCode="26">
+    package="org.hermit.netscramble" android:installLocation="auto" android:versionCode="27" android:versionName="5.0.1">
     
     <application
     		android:icon="@drawable/netscramble"
