--- a/On Watch/AndroidManifest.xml
+++ b/On Watch/AndroidManifest.xml
@@ -34,14 +34,14 @@
                 <action android:name="android.intent.action.EDIT" />
                 <action android:name="com.android.notepad.action.EDIT_NOTE" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="vnd.android.cursor.item/vnd.hermit.org.passage.passage" />
+                <data android:mimeType="vnd.android.cursor.item/vnd.org.hermit.passage.passage" />
             </intent-filter>
 
             <!-- Create a new note inside of a directory of passages. -->
             <intent-filter android:label="@string/passage_new_title">
                 <action android:name="android.intent.action.INSERT" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="vnd.android.cursor.dir/vnd.hermit.org.passage.passage" />
+                <data android:mimeType="vnd.android.cursor.dir/vnd.org.hermit.passage.passage" />
             </intent-filter>
 
 		</activity>
