--- a/On Watch/AndroidManifest.xml
+++ b/On Watch/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:authorities="org.hermit.provider.PassageData" />
 
 		<activity android:name=".OnWatch" android:label="@string/app_name"
-			android:launchMode="singleTop" android:theme="@style/OnWatchTheme">
+			android:launchMode="singleTop">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -74,9 +74,13 @@
 	<uses-permission android:name="android.permission.WRITE_SETTINGS"/>
 	<uses-permission android:name="android.permission.SET_TIME_ZONE"/>
 	
-	<uses-sdk android:minSdkVersion="4"/>
+	<uses-sdk android:minSdkVersion="11"/>
 
-
-<supports-screens android:smallScreens="false" android:resizeable="true" android:largeScreens="false" android:normalScreens="true" android:anyDensity="true"></supports-screens>
+    <supports-screens
+            android:smallScreens="false"
+            android:resizeable="true"
+            android:normalScreens="true"
+            android:anyDensity="true" android:largeScreens="true" android:xlargeScreens="true"/>
+            
 </manifest> 
 
