--- a/On Watch/AndroidManifest.xml
+++ b/On Watch/AndroidManifest.xml
@@ -10,6 +10,9 @@
         <provider android:name=".provider.PassageProvider"
             android:authorities="org.hermit.provider.PassageData" />
 
+        <provider android:name=".provider.VesselProvider"
+            android:authorities="org.hermit.provider.VesselData" />
+
         <service android:name=".service.OnWatchService" android:enabled="true" android:exported="false"/>
 
 		<activity android:name=".OnWatch" android:label="@string/app_name"
@@ -36,14 +39,14 @@
                 <action android:name="android.intent.action.EDIT" />
                 <action android:name="com.android.notepad.action.EDIT_NOTE" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="vnd.android.cursor.item/vnd.org.hermit.passage.passage" />
+                <data android:mimeType="vnd.android.cursor.item/vnd.org.hermit.sailing.passage" />
             </intent-filter>
 
             <!-- Create a new note inside of a directory of passages. -->
             <intent-filter android:label="@string/passage_new_title">
                 <action android:name="android.intent.action.INSERT" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="vnd.android.cursor.dir/vnd.org.hermit.passage.passage" />
+                <data android:mimeType="vnd.android.cursor.dir/vnd.org.hermit.sailing.passage" />
             </intent-filter>
 
 		</activity>
