--- a/On Watch/AndroidManifest.xml
+++ b/On Watch/AndroidManifest.xml
@@ -3,6 +3,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.hermit.onwatch" android:versionName="1.0"
 	android:versionCode="1">
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 	
 	<application android:label="@string/app_name"
 		android:description="@string/description" android:debuggable="true" android:icon="@drawable/android">
