--- a/On Watch/AndroidManifest.xml
+++ b/On Watch/AndroidManifest.xml
@@ -6,7 +6,13 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
 	
 	<application android:label="@string/app_name"
-		android:description="@string/description" android:debuggable="true" android:icon="@drawable/android">
+            android:icon="@drawable/android"
+            android:description="@string/description"
+            android:debuggable="true"
+            android:backupAgent="OnWatchBackupAgent">
+		
+		<meta-data android:name="com.google.android.backup.api_key"
+            android:value="AEdPqrEAAAAIt9wx5APc50aPUDW8nro-WB04nhpMGyu2ydLzGQ" />
 
         <provider android:name=".provider.PassageProvider"
             android:authorities="org.hermit.provider.PassageData" />
