--- a/Chime Timer/AndroidManifest.xml
+++ b/Chime Timer/AndroidManifest.xml
@@ -3,7 +3,8 @@
       package="org.hermit.chimetimer"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="11"/>
+    <supports-screens android:smallScreens="true" android:resizeable="true" android:largeScreens="true" android:normalScreens="true" android:anyDensity="true"></supports-screens>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".ChimeTimer"
@@ -20,6 +21,14 @@
                   android:launchMode="singleTop"
                   android:excludeFromRecents="true"
                   android:stateNotNeeded="true">
+        </activity>
+
+        <activity android:name=".Help"
+                android:configChanges="mcc|mnc|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout"
+                android:label="@string/help_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"></action>
+            </intent-filter>
         </activity>
 
         <service android:name=".ChimerService"
