--- a/Chime Timer/AndroidManifest.xml
+++ b/Chime Timer/AndroidManifest.xml
@@ -6,10 +6,10 @@
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="11"/>
     <supports-screens android:smallScreens="true" android:resizeable="true" android:largeScreens="true" android:normalScreens="true" android:anyDensity="true"></supports-screens>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false" android:description="@string/description">
         <activity android:name=".ChimeTimer"
                   android:label="@string/app_name"
-                  android:launchMode="singleTop">
+                  android:launchMode="singleTop" android:description="@string/description" android:icon="@drawable/icon">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
