--- a/Chime Timer/AndroidManifest.xml
+++ b/Chime Timer/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.hermit.chimetimer"
-      android:installLocation="auto" android:versionCode="2" android:versionName="1.1">
+      android:installLocation="auto" android:versionName="1.2" android:versionCode="3">
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="11"/>
     <supports-screens android:smallScreens="true" android:resizeable="true" android:largeScreens="true" android:normalScreens="true" android:anyDensity="true"></supports-screens>
 
